# ee595-project-spring-23

./: .gitignore  LICENSE  README.md  package-lock.json  research.md  research_papers.md
dashboard/: api.py  main.py
dashboard/back/: package-lock.json  package.json  tsconfig.json
dashboard/back/src/: app.ts  experiment.ts  simulation-orchestrator.ts
dashboard/dash/: package-lock.json  package.json
dashboard/dash/src/: App.tsx  api.ts  data.ts  index.tsx  results.tsx
dashboard/dash/src/segments/: experiment_setup_segment.tsx  network_topology_graphic.tsx  results_segment.tsx  stage_stepper.tsx  (+3 more)
dashboard/html/: index.html
linux-module/: CMakeLists.txt  Makefile  make.py  tcp_ml.c  tcp_ml.mod.c  tcp_ml_driver.cc
linux-module/driver/: CMakeLists.txt  tcp_ml_driver.cc
linux-module/module/: CMakeLists.txt  Kbuild
linux-module/netlink_user/: Makefile  test_netlink.c
ml-experiments/: model.h5  predict.py
reinforcement-learning/: README.md  cartpole.py  dqn.py  main.py  model.pth  ns3ai.py  replay_memory.py  system.py  tcp_ml_env.py  tcp_rl.py
research/: README.md  linux_module.txt
simulator/: congestion_simulator.cc  simulator_init.sh
simulator/congestion_simulations/: main.cc  model.pt  rl_agent.py  tcp-ml-env.cc  tcp-ml-env.hh  tcp-ml.cc  tcp-ml.hh
simulator/old_new_simulations/: main.cc  rl_agent.py  rpc.cc  rpc.hh  tcp-ml-env.cc  tcp-ml-env.hh  tcp-ml.cc  tcp-ml.hh  tcp-rl-env.cc  tcp-rl-env.hh
simulator/old_simulations/: topology_1.cc  topology_1.hh  topology_dl.cc
submissions/: project-paper.md  project-phase-1.md  project-proposal.md
